--- a/index.tml
+++ b/index.tml
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Nirbhay Sharma</title>
-  <link href="resume.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <h1>Nirbhay Sharma</h1>
